--- a/css/hero.css
+++ b/css/hero.css
@@ -4,8 +4,12 @@
     padding-top: 130px;
     padding-bottom: 119px;
   }
-  
-  .hero3 {
+
+
+.hero2 {
+  background-color: white; 
+}
+.hero3 {
     background-color: #ecceff;
     border: solid 1px #707070;
-  }
+}
