--- a/css/title.css
+++ b/css/title.css
@@ -1,17 +1,9 @@
 /* A Brand New Identity */
-.titolo h2{
+.title h2{
 font-family:"Merriweather", serif;
 font-weight: normal;
 font-size: 90px;
 color: #707070;
-margin: top;
+margin-top: 0px;
 margin-bottom: 35px;
 }
-.titolo p{
-    font-family:"Merriweather", serif;
-    font-weight: normal;
-    font-size: 22px;
-    color: #707070;
-    margin: 80px 200px;
-    line-height: 34px;
-    }
